fixed adaptive issues on mobile

--- a/src/styles/blocks/contact.pcss
+++ b/src/styles/blocks/contact.pcss
@@ -1,4 +1,6 @@
 .contact {
+  position: relative;
+  z-index: 10;
   padding-top: 100px;
   padding-bottom: 135px;
   @include phones() {
