--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -114,13 +114,14 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    
-    
-    @incluid phones() {
+  
+    @include phones() {
+      margin: 0 -10px;
       & > * {
-        flex: 1 1 50%;
+        flex: 0 1 50%;
       }
     }
+    
   }
   
 }
