--- a/src/styles/blocks/slider-controls.pcss
+++ b/src/styles/blocks/slider-controls.pcss
@@ -33,7 +33,7 @@
   &:disabled {
     border-color: hsla(0, 0%, 80%, .9);
     .slider-controls__icon {
-      fill: #hsla(0, 0%, 80%, .9);
+      fill: hsla(0, 0%, 80%, .9);
     }
   }
 }
