--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -98,6 +98,10 @@ img {
   font-size: 36px;
   font-weight: 700;
   color: #464d62;
+  
+  @include phones() {
+    font-size: 24px;
+  }
 }
 
 .bottom-wrapper {
